Day-14-modules-different-environments/modules/sg/main.tf
variable "environment" {}
variable "vpc_id" {}

resource "aws_security_group" "app_sg" {
  name        = "${var.environment}-sg"
  description = "Allow SSH and MySQL"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "MySQL"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "${var.environment}-sg" }
}

output "sg_id" {
  value = aws_security_group.app_sg.id
}
